deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-frontend
  labels:
    app: employee-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-frontend
  template:
    metadata:
      labels:
        app: employee-frontend
    spec:
      containers:
      - name: employee-frontend
        imagePullPolicy: Always
        image: ghcr.io/heewon00/vue_crud_security:argocd_v1
        ports:
        - containerPort: 80
