bluegreen.yaml
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: edu-bluegreen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort   
---
kind: Service
metadata:
  name: frontend-service-preview
spec:
  selector:
    app: edu-bluegreen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
