service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-frontend
spec:
  selector:
    app: employee-frontend
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
  type: NodePort
